fix app store badges not aligning with 'go there' button

--- a/css/projects.css
+++ b/css/projects.css
@@ -131,12 +131,13 @@
 .project-actions .btn {
 	display: block;
 	float: left;
+	height: 38px;
 	margin-right: 5px;
 }
 .project-app-badge {
 	display: block;
 	float: left;
-	height: 40px;
+	height: 38px;
 	margin-right: 5px;
 	background-repeat: no-repeat;
 	background-size: cover;
